<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/log"
    tools:context=".EditToDo">

    <TextView
        android:id="@+id/textupdateVenue"
        android:layout_width="128dp"
        android:layout_height="49dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="272dp"
        android:layout_marginEnd="266dp"
        android:layout_marginBottom="421dp"
        android:text="Venue"
        android:textAlignment="center"
        android:textColor="#062F59"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/editTextupdateVenue"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.363" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="EDIT TIME TABLE"
        android:textColor="#100F0F"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.437"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editToDoTextTitle"
        android:layout_width="341dp"
        android:layout_height="68dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="146dp"
        android:layout_marginEnd="38dp"
        android:layout_marginBottom="517dp"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:hint="@string/hintmodulename"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonEdit"
        android:layout_width="153dp"
        android:layout_height="74dp"
        android:background="@drawable/roundedbtn"
        android:padding="6dp"
        android:text="Edit Time Table"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.762" />

    <EditText
        android:id="@+id/editTextupdateVenue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="169dp"
        android:layout_marginTop="268dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="417dp"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:hint="@string/hintvenue"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editToDoTextDescription"
        android:layout_width="332dp"
        android:layout_height="106dp"
        android:layout_marginStart="43dp"
        android:layout_marginTop="376dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="249dp"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/hintDescription"
        android:inputType="textMultiLine"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>