<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/log"
    tools:context=".AddToDo">


    <TextView
        android:id="@+id/title"
        android:layout_width="304dp"
        android:layout_height="79dp"
        android:layout_marginTop="48dp"
        android:text="ADD A NEW TIME TABLE "
        android:textAlignment="center"
        android:textColor="#131313"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTitle"
        android:layout_width="255dp"
        android:layout_height="62dp"
        android:layout_marginStart="141dp"
        android:layout_marginTop="149dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="520dp"
        android:background="@drawable/custom_input"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/hintmodulename"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="#F6F4F4"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonAdd"
        android:layout_width="159dp"
        android:layout_height="40dp"
        android:layout_marginStart="126dp"
        android:layout_marginTop="530dp"
        android:layout_marginEnd="126dp"
        android:layout_marginBottom="161dp"
        android:background="@drawable/roundedbtn"
        android:padding="6dp"
        android:text="Add TimeTable"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/editTextVenue"
        android:layout_width="245dp"
        android:layout_height="36dp"
        android:layout_marginStart="140dp"
        android:layout_marginTop="269dp"
        android:layout_marginEnd="26dp"
        android:layout_marginBottom="426dp"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:hint="@string/hintvenue"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textVenue"
        android:layout_width="117dp"
        android:layout_height="38dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="269dp"
        android:layout_marginEnd="278dp"
        android:layout_marginBottom="424dp"
        android:text="Venue"
        android:textAlignment="center"
        android:textColor="#062F59"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextDescription"
        android:layout_width="364dp"
        android:layout_height="66dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="365dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="300dp"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/hintDescription"
        android:inputType="textMultiLine"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="109dp"
        android:layout_height="58dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="149dp"
        android:layout_marginEnd="286dp"
        android:layout_marginBottom="524dp"
        android:text="Module Name"
        android:textAlignment="center"
        android:textColor="#062F59"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>